--- a/gb/19/7/8/n11372575.md
+++ b/gb/19/7/8/n11372575.md
@@ -1,52 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>°²Ê¡²¦¿î2,800ÍòÔª À©´ó²ú¸¾»¤Àí·þÎñ</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å®‰çœæ‹¨æ¬¾2,800ä¸‡å…ƒ æ‰©å¤§äº§å¦‡æŠ¤ç†æœåŠ¡</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ09ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÖÜÔÂÚÐ±¨µ¼£©Ã¿Äê³¬¹ý14Íò¸öÓ¤¶ùÔÚ°²Ê¡³öÉú£¬µ«°²Ê¡Ö»ÓÐ900¶àÃû<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%8A%A9%E4%BA%A7%E6%8A%A4%E5%A3%AB.md">Öú²ú»¤Ê¿</a>£¨Midwives£©£¬Ô¶Ô¶¹©²»Ó¦Çó¡£Õþ¸®7ÔÂ8ÈÕ£¨ÖÜÒ»£©Ðû²¼Ôö¼Ó²¦¿î£¬Ïò3,400¸ö¼ÒÍ¥Ìá¹©¸ü¶àÑ¡Ôñ¡£</p>
-<p>°²Ê¡¸±Ê¡³¤¼æÎÀÉúÌü³¤Ò¶ÀøÑÅ £¨Christine Elliott£©ÖÜÒ»ÔÚ»ùÆæÄÉ£¨Kitchener£©Ðû²¼£¬½«²¦¿î2,800ÍòÔª£¨¼ÓÔª£¬ÏÂÍ¬£©£¬´Ó¶øÀ©´ó°²Ê¡µÄ²ú¸¾»¤Àí·þÎñ¡£ÕâÓÐÖúÓÚ¶à´ï3,400¸ö²ú¸¾ÔÚ»³ÔÐ¡¢·ÖÃä¼°²úÈìÆÚ¼ä»ñµÃ¸ü¶àÖÖÀàµÄ»¤Àí·þÎñ¡£</p>
-<p><a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%8A%A9%E4%BA%A7%E6%8A%A4%E5%A3%AB.md">Öú²ú»¤Ê¿</a>ÊÇ¾­¹ýÌØÊâÑµÁ·µÄ»¤Ê¿£¬¿ÉÏò²ú¸¾Ìá¹©³¤´ïÁùÖÜµÄÃâ·Ñ·þÎñ£¬¼´Ê¹Ã»ÓÐ°²Ê¡Ò½ÁÆ±£ÏÕ£¨OHIP£©µÄ²ú¸¾Ò²¿ÉÏíÊÜÃâ·Ñ·þÎñ£¬ÈçÁôÑ§ÉúÓëÓÎ¿Í¡£</p>
-<p>Öú²ú»¤Ê¿¿ÉÌá¹©Ò»ÏµÁÐ·þÎñ£º°ïÖú²ú¸¾Î¹ÄÌ£»Ëõ¶Ì²ú¸¾µÄ×¡ÔºÊ±¼ä£»¼ì²é²ú¸¾µÄÉíÌå×´¿ö£» ÔÚÓ¤¶ù³öÉú24Ð¡Ê±ÄÚµ½²ú¸¾¼ÒÀï°ïÃ¦¡£Áù¸öÐÇÆÚ¹ýºó£¬Öú²ú»¤Ê¿½«°Ñ²ú¸¾½»¸øÆä¼ÒÍ¥Ò½Éú¡£</p>
-<p>¡°ÎÒÃÇ°ÑÒ½ÁÆ¾­·Ñ»¨ÔÚ×îÄÜÈÃÊ¡ÃñÊÜÒæµÄµØ·½¡ª¡ªÇ°Ïß»¤Àí¡£¡±Ò¶ÀøÑÅËµ£º¡°Õâ±Ê¶îÍâµÄ²¦¿î½«°ïÖú¸ü¶à°²Ê¡¼ÒÍ¥»ñµÃÓÅÖÊµÄ²ú¸¾»¤Àí·þÎñ¡£¡±</p>
-<p>Ê¡¸®»¹¼Æ»®À©´óÖú²ú»¤Ê¿µÄ¹¤×÷·¶Î§£¬ÔÊÐíËûÃÇÎª²ú¸¾¿ª¸ü¶àÒ©¡£Õâ½«Ëõ¶Ì²ú¸¾µÈ´ýÒ©ÎïÓëÖÎÁÆµÄÊ±¼ä¡£Ôö¼Ó²¦¿îºó£¬Ê¡¸®½ñÄêÒ»¹²²¦¿î1.78ÒÚÔª£¬Ïò¶à´ï3.5Íò¸ö²ú¸¾Ìá¹©»¤Àí·þÎñ¡£</p>
-<p>°²Ê¡×¢²áÖú²ú»¤Ê¿£¨RM£©°ÂÍÐ£¨Janessa Otto£©±íÊ¾£º ¡°ÎÒÃÇºÜ¸ßÐË¿´µ½ÎÀÉúÌü³¤Ò¶ÀøÑÅ½ñÌìÐû²¼ÕâÐ©ÏûÏ¢£¬Ï£ÍûÎÒÃÇµØÇøµÄ²ú¸¾ÄÜ»ñµÃ¸ü¶à»¤Àí·þÎñ¡£¡±</p>
-<p>°²Ê¡Öú²ú»¤Ê¿Ð­»á½¨Òé£ºÊ¡Ãñ·¢ÏÖ×Ô¼º»³ÔÐºóÁ¢¼´ÁªÏµÖú²ú»¤Ê¿£¬ÒÔÈ·±£ÄÜ»ñµÃ»¤Àí·þÎñ£»Ê¡Ãñ¿ÉÉÏÍøÑ°ÕÒ×¢²áÖú²ú»¤Ê¿£¬¹ÙÍøµØÖ·ÊÇAom.on.ca¡£</p>
-<p>ÔðÈÎ±à¼­£ºÔÀâù</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ09æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å‘¨æœˆè°›æŠ¥å¯¼ï¼‰æ¯å¹´è¶…è¿‡14ä¸‡ä¸ªå©´å„¿åœ¨å®‰çœå‡ºç”Ÿï¼Œä½†å®‰çœåªæœ‰900å¤šå<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%A9%E4%BA%A7%E6%8A%A4%E5%A3%AB.md#1">åŠ©äº§æŠ¤å£«</a>ï¼ˆMidwivesï¼‰ï¼Œè¿œè¿œä¾›ä¸åº”æ±‚ã€‚æ”¿åºœ7æœˆ8æ—¥ï¼ˆå‘¨ä¸€ï¼‰å®£å¸ƒå¢žåŠ æ‹¨æ¬¾ï¼Œå‘3,400ä¸ªå®¶åº­æä¾›æ›´å¤šé€‰æ‹©ã€‚</p>
+<p>å®‰çœå‰¯çœé•¿å…¼å«ç”ŸåŽ…é•¿å¶åŠ±é›… ï¼ˆChristine Elliottï¼‰å‘¨ä¸€åœ¨åŸºå¥‡çº³ï¼ˆKitchenerï¼‰å®£å¸ƒï¼Œå°†æ‹¨æ¬¾2,800ä¸‡å…ƒï¼ˆåŠ å…ƒï¼Œä¸‹åŒï¼‰ï¼Œä»Žè€Œæ‰©å¤§å®‰çœçš„äº§å¦‡æŠ¤ç†æœåŠ¡ã€‚è¿™æœ‰åŠ©äºŽå¤šè¾¾3,400ä¸ªäº§å¦‡åœ¨æ€€å­•ã€åˆ†å¨©åŠäº§è¤¥æœŸé—´èŽ·å¾—æ›´å¤šç§ç±»çš„æŠ¤ç†æœåŠ¡ã€‚</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%A9%E4%BA%A7%E6%8A%A4%E5%A3%AB.md#1">åŠ©äº§æŠ¤å£«</a>æ˜¯ç»è¿‡ç‰¹æ®Šè®­ç»ƒçš„æŠ¤å£«ï¼Œå¯å‘äº§å¦‡æä¾›é•¿è¾¾å…­å‘¨çš„å…è´¹æœåŠ¡ï¼Œå³ä½¿æ²¡æœ‰å®‰çœåŒ»ç–—ä¿é™©ï¼ˆOHIPï¼‰çš„äº§å¦‡ä¹Ÿå¯äº«å—å…è´¹æœåŠ¡ï¼Œå¦‚ç•™å­¦ç”Ÿä¸Žæ¸¸å®¢ã€‚</p>
+<p>åŠ©äº§æŠ¤å£«å¯æä¾›ä¸€ç³»åˆ—æœåŠ¡ï¼šå¸®åŠ©äº§å¦‡å–‚å¥¶ï¼›ç¼©çŸ­äº§å¦‡çš„ä½é™¢æ—¶é—´ï¼›æ£€æŸ¥äº§å¦‡çš„èº«ä½“çŠ¶å†µï¼› åœ¨å©´å„¿å‡ºç”Ÿ24å°æ—¶å†…åˆ°äº§å¦‡å®¶é‡Œå¸®å¿™ã€‚å…­ä¸ªæ˜ŸæœŸè¿‡åŽï¼ŒåŠ©äº§æŠ¤å£«å°†æŠŠäº§å¦‡äº¤ç»™å…¶å®¶åº­åŒ»ç”Ÿã€‚</p>
+<p>â€œæˆ‘ä»¬æŠŠåŒ»ç–—ç»è´¹èŠ±åœ¨æœ€èƒ½è®©çœæ°‘å—ç›Šçš„åœ°æ–¹â€”â€”å‰çº¿æŠ¤ç†ã€‚â€å¶åŠ±é›…è¯´ï¼šâ€œè¿™ç¬”é¢å¤–çš„æ‹¨æ¬¾å°†å¸®åŠ©æ›´å¤šå®‰çœå®¶åº­èŽ·å¾—ä¼˜è´¨çš„äº§å¦‡æŠ¤ç†æœåŠ¡ã€‚â€</p>
+<p>çœåºœè¿˜è®¡åˆ’æ‰©å¤§åŠ©äº§æŠ¤å£«çš„å·¥ä½œèŒƒå›´ï¼Œå…è®¸ä»–ä»¬ä¸ºäº§å¦‡å¼€æ›´å¤šè¯ã€‚è¿™å°†ç¼©çŸ­äº§å¦‡ç­‰å¾…è¯ç‰©ä¸Žæ²»ç–—çš„æ—¶é—´ã€‚å¢žåŠ æ‹¨æ¬¾åŽï¼Œçœåºœä»Šå¹´ä¸€å…±æ‹¨æ¬¾1.78äº¿å…ƒï¼Œå‘å¤šè¾¾3.5ä¸‡ä¸ªäº§å¦‡æä¾›æŠ¤ç†æœåŠ¡ã€‚</p>
+<p>å®‰çœæ³¨å†ŒåŠ©äº§æŠ¤å£«ï¼ˆRMï¼‰å¥¥æ‰˜ï¼ˆJanessa Ottoï¼‰è¡¨ç¤ºï¼š â€œæˆ‘ä»¬å¾ˆé«˜å…´çœ‹åˆ°å«ç”ŸåŽ…é•¿å¶åŠ±é›…ä»Šå¤©å®£å¸ƒè¿™äº›æ¶ˆæ¯ï¼Œå¸Œæœ›æˆ‘ä»¬åœ°åŒºçš„äº§å¦‡èƒ½èŽ·å¾—æ›´å¤šæŠ¤ç†æœåŠ¡ã€‚â€</p>
+<p>å®‰çœåŠ©äº§æŠ¤å£«åä¼šå»ºè®®ï¼šçœæ°‘å‘çŽ°è‡ªå·±æ€€å­•åŽç«‹å³è”ç³»åŠ©äº§æŠ¤å£«ï¼Œä»¥ç¡®ä¿èƒ½èŽ·å¾—æŠ¤ç†æœåŠ¡ï¼›çœæ°‘å¯ä¸Šç½‘å¯»æ‰¾æ³¨å†ŒåŠ©äº§æŠ¤å£«ï¼Œå®˜ç½‘åœ°å€æ˜¯Aom.on.caã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå²³æ€¡</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/8/n11372575.htm">°²Ê¡²¦¿î2,800ÍòÔª À©´ó²ú¸¾»¤Àí·þÎñ</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11370755.htm">°²Ê¡Î÷±±²¿É½ÁÖ´ó»ð³ÖÐøÂûÑÓ »·¾³²¿·¢¿ÕÆø¾¯¸æ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370444.htm">°²Ê¡°ÙËêÀÏÈË³¤ÊÙÃØ¾÷£º 8¸ö×Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370429.htm">Í¨ÇÚÉÙÓÚ15·ÖÖÓ ¾©Ê¿¶Ù¿¿´ËÇÀÈË²Å</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370409.htm">´ø·ÀÉ¹ÏµÊýµÄ»¯×±Æ·ÄÜ´úÌæ·ÀÉ¹Ëª£¿×¨¼ÒÕâÃ´Ëµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370407.htm">ÄÐ×Ó¼Ýµç¶¯³µ´©ÐÐÃÀ¼Ó ÄâÁ½ÔÂÐÐÊ»2.5Íò¹«Àï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/1/n11357953.htm">ÆÆ¼ªÄáË¹¼ÍÂ¼ °²Ê¡Ð¡Õò4Ç§ÈË×é·ãÒ¶Í¼°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11354622.htm">¹úÇìÈÕÌìÆø ¿ªÃÅ¼°¹ØÃÅ ¹Û¿´Ñæ»ðºÃÈ¥´¦</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11369986.htm">¡°ÈýÏ¿´ó°Ó±äÐÎ¡±Òý¹Ø×¢ ¾°ÇøÔÝÍ£½ÓÓÎ¿Í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11370859.htm">¡¾·­Ç½±Ø¿´¡¿ÈýÏ¿´ó°Ó±äÐÎÆØ¹âºó ¾°ÇøÍ£½ÓÓÎ¿Í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370428.htm">¸°ÁªºÏ¹úÑÝ½²·´ËÍÖÐ ºÎÔÏÊ«ÐÐÇ°¼ÄÓï´ßÈËÀáÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370553.htm">¸æ±ðÑÝ³ª»áÈ÷ÀáÏÖ³¡ ·ÑÓñÇå£ºÀë±ðÄÑÒÔËµ³ö¿Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229726.htm">¡¾ÏÍºó´«¡¿´ó½Å»Êºó±³×ÅÉËÖØÕÉ·òÌÓ³öÏÕ¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11354386.htm">ÊÍåÈÄ²ÄáÓëËûµÄ¼ÒÈË£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353576.htm">ÃüÔËÌì¶¨Âð£¿ÎºáçÊµ¼ÊÑéÖ¤ÈÃËû¾ªÌ¾£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/7/27/n8143615.htm">¡¾ÎÄÊ·¡¿³ÐÌìÃü½µÈË¼ä ººÎäµÛÉÙÄêÏÔ´Ï»Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/6/n11368860.htm">ÃÀÃ½½ÒÒ¶½£Ó¢ÓëÏ°½üÆ½¼Ò×å¼äµÄÇ×ÃÜ¹ØÏµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/6/n11368256.htm">ÔÁÉÏÊÐµç×Ó¹«Ë¾Í»µ¹±Õ ´óÅú¹©Ó¦ÉÌÔ±¹¤Î¬È¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/6/n11368385.htm">ÖÐ¹²¶à´ÎÉù³ÆÃÀ¹úÓ¦È¡Ïû¹ØË° ×¨¼Ò·ÖÎöÔ­Òò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/1/n11358059.htm">¡¾ÐÂÎÅ¿´µã¡¿55Íò¸ÛÈËÆßÒ»ÔÙ¿¹Õù Õðº³È«Çò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/4/n11364455.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖØÆôÌ¸ÅÐ ÃÀ3´óÓÅÊÆ±±¾©ÄÑ±ÈÄâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/5/n11367010.htm">¡¾ÐÂÎÅ¿´µã¡¿É½ÓêÓûÀ´·çÂúÂ¥ Ïã¸Û¿¼Ñé±±¾©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370428.htm">¸°ÁªºÏ¹úÑÝ½²·´ËÍÖÐ ºÎÔÏÊ«ÐÐÇ°¼ÄÓï´ßÈËÀáÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/5/n11367271.htm">Ì·Ó½÷ë³Å¾¯Óà²¨ ÍøÃñÁªÊð´Ù½ðÂíÈ¡ÏûÆäÓ°µÛ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370553.htm">¸æ±ðÑÝ³ª»áÈ÷ÀáÏÖ³¡ ·ÑÓñÇå£ºÀë±ðÄÑÒÔËµ³ö¿Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/5/n11367600.htm">ÔÙ±»´«»é±äÏûÏ¢ »ÆÏþÃ÷£ºÓÐÏÂ´Î¾Í·¢ÂÉÊ¦º¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/6/n11368004.htm">ÖÚÃ÷ÐÇ½ÓÊÜÌßÆ¿¸ÇÌôÕ½ Õç×Óµ¤ÃÉÑÛÇáËÉ¹ý¹Ø</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/6/29/n11354622.md#1">å›½åº†æ—¥å¤©æ°” å¼€é—¨åŠå…³é—¨ è§‚çœ‹ç„°ç«å¥½åŽ»å¤„</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/1/n11357953.md#1">ç ´å‰å°¼æ–¯çºªå½• å®‰çœå°é•‡4åƒäººç»„æž«å¶å›¾æ¡ˆ</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/7/n11370407.md#1">ç”·å­é©¾ç”µåŠ¨è½¦ç©¿è¡Œç¾ŽåŠ  æ‹Ÿä¸¤æœˆè¡Œé©¶2.5ä¸‡å…¬é‡Œ</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/7/n11370409.md#1">å¸¦é˜²æ™’ç³»æ•°çš„åŒ–å¦†å“èƒ½ä»£æ›¿é˜²æ™’éœœï¼Ÿä¸“å®¶è¿™ä¹ˆè¯´</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/7/n11370429.md#1">é€šå‹¤å°‘äºŽ15åˆ†é’Ÿ äº¬å£«é¡¿é æ­¤æŠ¢äººæ‰</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/7/n11370444.md#1">å®‰çœç™¾å²è€äººé•¿å¯¿ç§˜è¯€ï¼š 8ä¸ªå­—</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/8/n11370755.md#1">å®‰çœè¥¿åŒ—éƒ¨å±±æž—å¤§ç«æŒç»­è”“å»¶ çŽ¯å¢ƒéƒ¨å‘ç©ºæ°”è­¦å‘Š</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753004.md#1">GTAäº”æœˆæˆ¿äº§äº¤æ˜“ä¸‹é™39%?æˆ¿ä»·æ¶¨è¿‘10%?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753015.md#1">æš´é£Žé›¨ä¸¤å‘¨åŽ å®‰çœæ°‘å®…ç»´ä¿®ç§¯åŽ‹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752949.md#1">å¤šä¼¦å¤š60%å…¬å…±é¥®æ°´å–·æ³‰æœªå¯åŠ¨  å±…æ°‘ä¸æ»¡</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/8/n11372575.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/16/n10223963.md#1" target="_blank">â€œè¥¿å•æ°‘ä¸»å¢™â€å‰åŽçš„é‚“å°å¹³</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">ä¼Šæœ—å§‘å¨˜å˜‰æ‰Žå°”?å¡”ç“¦çº³è‰¾(3) éª‘å‘è‡ªç”±</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956529.md#1">å°ç”·æ‹’ç¼´è¿åå±…å®¶æ£€ç–«ç½šé”¾ äºŽ8æ—¥å·²å‡ºå¢ƒ å­˜æ¬¾é­æ‰£æŠ¼</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950904.md#1">ã€ç‹¬å®¶ã€‘æ­¦æ±‰æ–°å¢žç¡®è¯Šæ˜¯ä¸­å…±å…¬å¸ƒçš„22å€</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11959031.md#1">ä¼ ä¹ è¿‘å¹³äº²è‡ªä¸‹ä»¤ä¸¥åŠžä»»å¿—å¼º çº¢äºŒä»£åˆ†è£‚</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11959110.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘â€œæŠ—ç–«èƒœåˆ©â€ç‚’è¿‡å¤´ ä¸­å…±å‡ºæ‰‹æŠ“äºº</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956032.md#1">ã€æ‹æ¡ˆæƒŠå¥‡ã€‘äº¬æ´¥å†€é£Žç«è¿žå¤© 7å¸¸å§”è¿‘æ¥åå¸¸</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955678.md#1">é’Ÿå—å±±å†ç”©é”… é»„ç§‹ç”Ÿæ€’å‘›ä¸­å…±ä¸“å®¶çŽ©å¼„è¨€è¯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11959416.md#1">ä¼—æ˜Ÿé­é™†â€œé™ç±ä»¤â€ç‚¹å å°æ¹¾è‰ºäººæ­ä¸­å…±å¥—è·¯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11954954.md#1">çŽ‹åŠ›å®æ­¦æ±‰æ¼”å‡ºåŽå‘çƒ§ å¿§æŸ“ç–«è¿”å°éš”ç¦»2ä¸ªæœˆ</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950901.md#1">æœæ±¶æ³½ç”¨å£ç½©æ¢ç±³ ä¸Žä½•éŸµè¯—å¹½é»˜äº’åŠ¨ç¬‘ç¿»ç½‘å‹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950740.md#1">å‘¨æ°ä¼¦å…¨å®¶æ¾³æ´²åº¦å‡ è¿”å°é¡»å±…å®¶éš”ç¦»14å¤©</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/11/n11861945.md#1">ç—…æ˜¯å‰ä¸–ä¸šæŠ¥ï¼Ÿæ°‘å›½äººåšå¥‡æ¢¦ ç–—æ¶ç–¾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">å§»ç¼˜å¤©æ³¨å®š ä¸‘å¥³æœ‰ä¸‘ç¦</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938995.md#1">ä»–åœ¨å¦å¤–ç©ºé—´çœ‹è§äº†æ•…äºº æ˜Žç™½äº†ä¾µåžå–„æ¬¾çš„ä»£ä»·</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/2/n11909598.md#1">ã€å‘½ç†ã€‘é•¿å¯¿çš„å‘½æ€Žæ ·çœ‹ï¼Ÿ</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938981.md#1">â€œåƒé‡‘æŠ¥å¾·â€è‹±é›„æœ¬è‰²</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/8/n11372575.htm">å®‰çœæ‹¨æ¬¾2,800ä¸‡å…ƒ æ‰©å¤§äº§å¦‡æŠ¤ç†æœåŠ¡</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/7/8/n11372575.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
